--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
                     <div class="sty">KEEP IT SIMPLE </div>
                     <div class="bold">BUT SIGNIFICANT</div>
                 </div>
+                <div class="spinner">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
                 <div class="scroll">
                     <a href="#portfolio01">SCROLL DOWN</a>
                 </div>
@@ -76,24 +84,8 @@
                     </div>
                 </div>
                 <div class="description">
-                    <button class="mark">
-                        <span class="span-mother">
-                            <span>M</span>
-                            <span>O</span>
-                            <span>B</span>
-                            <span>I</span>
-                            <span>L</span>
-                            <span>E</span>
-                        </span>
-                        <span class="span-mother2">
-                            <span>M</span>
-                            <span>O</span>
-                            <span>B</span>
-                            <span>I</span>
-                            <span>L</span>
-                            <span>E</span>
-                        </span>
-                    </button>
+                    <div class="circle">
+                    </div>
                     <strong>PROJECT 01</strong>
                     <h2><img src="./images/logo_fingersuit.svg" alt=""> <span>핑거수트</span></h2>
                     <div class="txt_row">
@@ -201,24 +193,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="description"> <button class="mark">
-                        <span class="span-mother">
-                            <span>M</span>
-                            <span>O</span>
-                            <span>B</span>
-                            <span>I</span>
-                            <span>L</span>
-                            <span>E</span>
-                        </span>
-                        <span class="span-mother2">
-                            <span>M</span>
-                            <span>O</span>
-                            <span>B</span>
-                            <span>I</span>
-                            <span>L</span>
-                            <span>E</span>
-                        </span>
-                    </button>
+                <div class="description">
+                    <div class="circle">
+                    </div>
                     <strong>PROJECT 03</strong>
                     <h2><img src="./images/logo_etude.png" alt=""> <span>에뛰드하우스 - 아모레퍼시픽</span></h2>
                     <div class="txt_row">
@@ -248,7 +225,8 @@
                         </dl>
                     </div>
                     <div class="btn">
-                        <a href="https://emilyyujeong.github.io/re_etude/" target='_blank'>VIEW ON WEB</a>
+                        <a href="https://emilyyujeong.github.io/re_etude/" target='_blank'>VIEW ON
+                            WEB</a>
                     </div>
 
                 </div>
@@ -264,6 +242,7 @@
                     </div>
                 </div>
                 <div class="description">
+
                     <strong>PROJECT 04</strong>
                     <h2> <img src="./images/logo_eggdrop.png" alt=""> <span>에그드랍 홈페이지</span></h2>
                     <div class="txt_row">
@@ -318,24 +297,9 @@
                     </div>
                 </div>
                 <div class="description">
-                    <button class="mark">
-                        <span class="span-mother">
-                            <span>M</span>
-                            <span>O</span>
-                            <span>B</span>
-                            <span>I</span>
-                            <span>L</span>
-                            <span>E</span>
-                        </span>
-                        <span class="span-mother2">
-                            <span>M</span>
-                            <span>O</span>
-                            <span>B</span>
-                            <span>I</span>
-                            <span>L</span>
-                            <span>E</span>
-                        </span>
-                    </button>
+                    <div class="circle">
+                    </div>
+
                     <strong>PROJECT 05</strong>
                     <h2><img src="./images/logo_spao.png" alt=""> <span>SPA 대표 브랜드 스파오 공식몰</span></h2>
                     <div class="txt_row">
