--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                             <dt>Type</dt>
                             <dd>Standard Web - Multipage</dd>
                             <dt>Tool</dt>
-                            <dd>CMS(그누보드), Javascript(JQuery), 카카오 api 활용</dd>
+                            <dd>CMS(그누보드), Javascript(JQuery), AOS, 카카오 api 활용</dd>
                             <dt>Font</dt>
                             <dd>Noto Sans KR</dd>
                             <dt>Color</dt>
