--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
                     <div class="circle">
                     </div>
                     <strong>PROJECT 01</strong>
-                    <h2><img src="./images/logo_fingersuit.svg" alt=""> <span>핑거수트</span></h2>
+                    <h2><img src="./images/logo_fingersuit.svg" alt="">핑거수트</h2>
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
-                            <dd>Responsive Web</dd>
+                            <dd> <span class="mc"> Responsive Web </span></dd>
                             <dt>Tool</dt>
-                            <dd>Vanilla Javascript, Swiper.js</dd>
+                            <dd> <span class="mc">Vanilla Javascript </span>, Swiper.js</dd>
                             <dt>Font</dt>
                             <dd>Noto Sans KR</dd>
                             <dt>Color</dt>
@@ -109,7 +109,7 @@
                             <dd class="desc">
                                 브랜드 자체의 모던하고 세련된 이미지를 살리기 위해
                                 </br> 모노톤의 색상을 사용하였습니다.
-                                </br> 또한 슬라이드를 적용하여 여러가지 상품이 최대한 많이
+                                </br> 또한 <span class="mc"> Swiper 슬라이드 </span>를 적용하여 여러가지 상품이 최대한 많이
                                 </br> 노출될 수 있도록 디자인 하였습니다.
                             </dd>
                         </dl>
@@ -142,13 +142,13 @@
                     <div class="circle">
                     </div>
                     <strong>PROJECT 02</strong>
-                    <h2><img src="./images/logo_creverse.svg" alt=""> <span>크레버스 - 융합사고력 플랫폼</span></h2>
+                    <h2><img src="./images/logo_creverse.svg" alt="">크레버스 - 융합사고력 플랫폼</h2>
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
-                            <dd>Responsive Web</dd>
+                            <dd> <span class="mc"> Responsive Web </span></dd>
                             <dt>Tool</dt>
-                            <dd>React.js, Javascript(JQuery)</dd>
+                            <dd><span class="mc"> React.js </span>, Javascript(JQuery)</dd>
                             <dt>Font</dt>
                             <dd>Noto Sans KR</dd>
                             <dt>Color</dt>
@@ -162,7 +162,8 @@
                             <dd>개인작업 100%</dd>
                             <dt>Info</dt>
                             <dd class="desc">
-                                아동, 청소년 교육 서비스의 컨셉에 맞게
+                                <span class="mc"> React.js 를 사용하여 제작한</span> 교육 서비스 업체 사이트입니다.
+                                </br> 아동, 청소년의 눈높이에 맞추어
                                 </br> 밝고 높은 채도의 색감과 캐릭터를 활용하였습니다.
                                 </br> 또한 섹션을 뚜렷하게 나누어
                                 </br> 효율적으로 정보를 전달 할 수 있도록 노력했습니다.
@@ -197,11 +198,11 @@
                     <div class="circle">
                     </div>
                     <strong>PROJECT 03</strong>
-                    <h2><img src="./images/logo_etude.png" alt=""> <span>에뛰드하우스 - 아모레퍼시픽</span></h2>
+                    <h2><img src="./images/logo_etude.png" alt="">에뛰드하우스 - 아모레퍼시픽</h2>
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
-                            <dd>Responsive Web</dd>
+                            <dd><span class="mc">Responsive Web</span></dd>
                             <dt>Tool</dt>
                             <dd>HTML5, CSS3, Javascript(JQuery)</dd>
                             <dt>Font</dt>
@@ -244,13 +245,13 @@
                 <div class="description">
 
                     <strong>PROJECT 04</strong>
-                    <h2> <img src="./images/logo_eggdrop.png" alt=""> <span>에그드랍 홈페이지</span></h2>
+                    <h2> <img src="./images/logo_eggdrop.png" alt="">에그드랍 홈페이지</h2>
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
-                            <dd>Standard Web - Multipage</dd>
+                            <dd>Standard Web - <span class="mc"> Multipage</span></dd>
                             <dt>Tool</dt>
-                            <dd>CMS(그누보드), Javascript(JQuery), AOS, 카카오 api 활용</dd>
+                            <dd><span class="mc">CMS(그누보드)</span>, Javascript(JQuery), AOS, 카카오 api 활용</dd>
                             <dt>Font</dt>
                             <dd>Noto Sans KR</dd>
                             <dt>Color</dt>
@@ -264,7 +265,7 @@
                             <dd>개인작업 100%</dd>
                             <dt>Info</dt>
                             <dd class="desc">
-                                그누보드를 사용하여 메인페이지와 서브페이지를 제작하였습니다.
+                                <span class="mc">그누보드를 사용하여 메인페이지와 서브페이지</span>를 제작하였습니다.
                                 </br> 다단메뉴로 구성해 사이트 내 서비스들을
                                 </br> 쉽게 볼 수 있도록 표시 했고
                                 </br> 또한 섹션을 뚜렷하게 나누어
@@ -301,15 +302,15 @@
                     </div>
 
                     <strong>PROJECT 05</strong>
-                    <h2><img src="./images/logo_spao.png" alt=""> <span>SPA 대표 브랜드 스파오 공식몰</span></h2>
+                    <h2><img src="./images/logo_spao.png" alt="">SPA 대표 브랜드 스파오 공식몰</h2>
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
                             <dd>Responsive Web</dd>
                             <dt>Tool</dt>
-                            <dd>CMS(영카트), Javascript(JQuery)</dd>
+                            <dd><span class="mc">CMS(영카트)</span>, Javascript(JQuery)</dd>
                             <dt>Font</dt>
-                            <dd>Noto Sans KR</dd>
+                            <dd> Noto Sans KR</dd>
                             <dt>Color</dt>
                             <dd>
                                 <span class="color c51"></span>
@@ -318,10 +319,10 @@
                                 <span class="color c54"></span>
                             </dd>
                             <dt>Work</dt>
-                            <dd>개인작업 100%</dd>
+                            <dd> 개인작업 100%</dd>
                             <dt>Info</dt>
                             <dd class="desc">
-                                영카트를 사용하여 메인페이지와 서브페이지를 제작한 쇼핑몰입니다.
+                                <span class="mc"> 영카트를 사용하여 메인페이지와 서브페이지를 제작한</span> 쇼핑몰입니다.
                                 </br> 다양한 상품의 홍보가 중요한 쇼핑몰 특성에 맞추어
                                 </br> 메뉴 디자인과 레이아웃을 최대한 심플하게 제작하였습니다.
                             </dd>
@@ -339,10 +340,10 @@
                 <h2>PROFILE</h2>
                 <div class="intro">
                     <div class="category">
-                        한유정
+                        INFO
                     </div>
                     <ul class="elements">
-                        <li>HANYUJEONG</li>
+                        <li>한유정</li>
                         <li>1993.01.16</li>
                         <li>신라대학교 영어교육과 졸업</li>
                         <li>프론트엔드 개발자 NCS 과정 수료</li>
