--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/slick.css">
-    <link rel="stylesheet" href="./css/jquery.fullpage.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/fullpage.js@2.9.4/dist/jquery.fullpage.min.css" rel="stylesheet">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <link rel="stylesheet" href="./css/portfolio.css">
 
 
     <script src="./js/jquery-1.12.4.min.js"></script>
-    <script src="./js/jquery.fullpage.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fullpage.js@2.9.4/dist/jquery.fullpage.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/portfolio.js"></script>
 
