--- a/index.html
+++ b/index.html
@@ -66,174 +66,7 @@
                 </div>
             </div>
         </div>
-
         <div class="section section01">
-            <div class="inner">
-                <div class="content_bg">
-                    <div class="content">
-                        <div class="case">
-                            <a href=""><img src="./images/fg.png" alt="hyj_etude"></a>
-                        </div>
-                    </div>
-                    <div class="mo_bg">
-                        <div class="mo_content">
-                            <div class="mo_case">
-                                <a href=""><img src="./images/fg_mo.png" alt=""></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="description">
-                    <div class="circle">
-                    </div>
-                    <strong>PROJECT 01</strong>
-                    <h2><img src="./images/logo_fingersuit.svg" alt="">핑거수트</h2>
-                    <div class="txt_row">
-                        <dl>
-                            <dt>Type</dt>
-                            <dd> <span class="mc"> Responsive Web </span></dd>
-                            <dt>Tool</dt>
-                            <dd> <span class="mc">Vanilla Javascript </span>, Swiper.js</dd>
-                            <dt>Font</dt>
-                            <dd>Noto Sans KR</dd>
-                            <dt>Color</dt>
-                            <dd>
-                                <span class="color c01"></span>
-                                <span class="color c02"></span>
-                                <span class="color c03"></span>
-                                <span class="color c04"></span>
-                            </dd>
-                            <dt>Work</dt>
-                            <dd>개인작업 100%</dd>
-                            <dt>Info</dt>
-                            <dd class="desc">
-                                브랜드 자체의 모던하고 세련된 이미지를 살리기 위해
-                                </br> 모노톤의 색상을 사용하였습니다.
-                                </br> 또한 <span class="mc"> Swiper 슬라이드 </span>를 적용하여 여러가지 상품이 최대한 많이
-                                </br> 노출될 수 있도록 디자인 하였습니다.
-                            </dd>
-                        </dl>
-                    </div>
-                    <div class="btn ">
-                        <a href="https://emilyyujeong.github.io/fingersuit" target='_blank'>VIEW ON WEB</a>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <div class="section section02">
-            <div class="inner">
-
-                <div class="content_bg">
-                    <div class="content">
-                        <div class="case">
-                            <a href=""><img src="./images/creverse02.png" alt="hyj_creverse"></a>
-                        </div>
-                    </div>
-                    <div class="mo_bg">
-                        <div class="mo_content">
-                            <div class="mo_case">
-                                <a href=""><img src="./images/mo_crev02.png" alt=""></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="description">
-                    <div class="circle">
-                    </div>
-                    <strong>PROJECT 02</strong>
-                    <h2><img src="./images/logo_creverse.svg" alt="">크레버스 - 융합사고력 플랫폼</h2>
-                    <div class="txt_row">
-                        <dl>
-                            <dt>Type</dt>
-                            <dd> <span class="mc"> Responsive Web </span></dd>
-                            <dt>Tool</dt>
-                            <dd><span class="mc"> React.js </span>, Javascript(JQuery)</dd>
-                            <dt>Font</dt>
-                            <dd>Noto Sans KR</dd>
-                            <dt>Color</dt>
-                            <dd>
-                                <span class="color c21"></span>
-                                <span class="color c22"></span>
-                                <span class="color c23"></span>
-                                <span class="color c24"></span>
-                            </dd>
-                            <dt>work</dt>
-                            <dd>개인작업 100%</dd>
-                            <dt>Info</dt>
-                            <dd class="desc">
-                                <span class="mc"> React.js 를 사용하여 제작한</span> 교육 서비스 업체 사이트입니다.
-                                </br> 아동, 청소년의 눈높이에 맞추어
-                                </br> 밝고 높은 채도의 색감과 캐릭터를 활용하였습니다.
-                                </br> 또한 섹션을 뚜렷하게 나누어
-                                </br> 효율적으로 정보를 전달 할 수 있도록 노력했습니다.
-                            </dd>
-                        </dl>
-                    </div>
-                    <div class="btn">
-                        <a href="https://emilyyujeong.github.io/react_test01/" target='_blank'>VIEW ON WEB</a>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <div class="section section03">
-            <div class="inner">
-
-                <div class="content_bg">
-                    <div class="content">
-                        <div class="case">
-                            <a href=""><img src="./images/etude.png" alt="hyj_etude"></a>
-                        </div>
-                    </div>
-                    <div class="mo_bg">
-                        <div class="mo_content">
-                            <div class="mo_case">
-                                <a href=""><img src="./images/etude_mo.png" alt=""></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="description">
-                    <div class="circle">
-                    </div>
-                    <strong>PROJECT 03</strong>
-                    <h2><img src="./images/logo_etude.png" alt="">에뛰드하우스 - 아모레퍼시픽</h2>
-                    <div class="txt_row">
-                        <dl>
-                            <dt>Type</dt>
-                            <dd><span class="mc">Responsive Web</span></dd>
-                            <dt>Tool</dt>
-                            <dd>HTML5, CSS3, Javascript(JQuery)</dd>
-                            <dt>Font</dt>
-                            <dd>Noto Sans KR</dd>
-                            <dt>Color</dt>
-                            <dd>
-                                <span class="color c31"></span>
-                                <span class="color c32"></span>
-                                <span class="color c33"></span>
-                                <span class="color c34"></span>
-                            </dd>
-                            <dt>Work</dt>
-                            <dd>개인작업 100%</dd>
-                            <dt>Info</dt>
-                            <dd class="desc">
-                                브랜드의 대표 색상인 핑크를 활용해
-                                </br> 전반적으로 밝고 아기자기한 분위기를 조성하였습니다.
-                                </br> 다양한 형태의 슬라이드와 레이아웃을 활용해
-                                </br> 사용자에게 흥미를 유도할 수 있게 구성하였습니다.
-                            </dd>
-                        </dl>
-                    </div>
-                    <div class="btn">
-                        <a href="https://emilyyujeong.github.io/re_etude/" target='_blank'>VIEW ON
-                            WEB</a>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <div class="section section04">
             <div class="inner">
                 <div class="content_bg">
                     <div class="content">
@@ -243,8 +76,10 @@
                     </div>
                 </div>
                 <div class="description">
+                    <div class="circle circle_gnu">
+                    </div>
 
-                    <strong>PROJECT 04</strong>
+                    <strong>PROJECT 01</strong>
                     <h2> <img src="./images/logo_eggdrop.png" alt="">에그드랍 홈페이지</h2>
                     <div class="txt_row">
                         <dl>
@@ -301,7 +136,7 @@
                     <div class="circle">
                     </div>
 
-                    <strong>PROJECT 05</strong>
+                    <strong>PROJECT 02</strong>
                     <h2><img src="./images/logo_spao.png" alt="">SPA 대표 브랜드 스파오 공식몰</h2>
                     <div class="txt_row">
                         <dl>
@@ -335,6 +170,180 @@
                 </div>
             </div>
         </div>
+
+        <div class="section section03">
+            <div class="inner">
+                <div class="content_bg">
+                    <div class="content">
+                        <div class="case">
+                            <a href=""><img src="./images/fg.png" alt="hyj_etude"></a>
+                        </div>
+                    </div>
+                    <div class="mo_bg">
+                        <div class="mo_content">
+                            <div class="mo_case">
+                                <a href=""><img src="./images/fg_mo.png" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="description">
+                    <div class="circle">
+                    </div>
+                    <strong>PROJECT 03</strong>
+                    <h2><img src="./images/logo_fingersuit.svg" alt="">핑거수트</h2>
+                    <div class="txt_row">
+                        <dl>
+                            <dt>Type</dt>
+                            <dd> <span class="mc"> Responsive Web </span></dd>
+                            <dt>Tool</dt>
+                            <dd> <span class="mc">Vanilla Javascript </span>, Swiper.js</dd>
+                            <dt>Font</dt>
+                            <dd>Noto Sans KR</dd>
+                            <dt>Color</dt>
+                            <dd>
+                                <span class="color c01"></span>
+                                <span class="color c02"></span>
+                                <span class="color c03"></span>
+                                <span class="color c04"></span>
+                            </dd>
+                            <dt>Work</dt>
+                            <dd>개인작업 100%</dd>
+                            <dt>Info</dt>
+                            <dd class="desc">
+                                브랜드 자체의 모던하고 세련된 이미지를 살리기 위해
+                                </br> 모노톤의 색상을 사용하였습니다.
+                                </br> 또한 <span class="mc"> Swiper 슬라이드 </span>를 적용하여 여러가지 상품이 최대한 많이
+                                </br> 노출될 수 있도록 디자인 하였습니다.
+                            </dd>
+                        </dl>
+                    </div>
+                    <div class="btn ">
+                        <a href="https://emilyyujeong.github.io/fingersuit" target='_blank'>VIEW ON WEB</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="section section04">
+            <div class="inner">
+
+                <div class="content_bg">
+                    <div class="content">
+                        <div class="case">
+                            <a href=""><img src="./images/creverse02.png" alt="hyj_creverse"></a>
+                        </div>
+                    </div>
+                    <div class="mo_bg">
+                        <div class="mo_content">
+                            <div class="mo_case">
+                                <a href=""><img src="./images/mo_crev02.png" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="description">
+                    <div class="circle">
+                    </div>
+                    <strong>PROJECT 04</strong>
+                    <h2><img src="./images/logo_creverse.svg" alt="">크레버스 - 융합사고력 플랫폼</h2>
+                    <div class="txt_row">
+                        <dl>
+                            <dt>Type</dt>
+                            <dd> <span class="mc"> Responsive Web </span></dd>
+                            <dt>Tool</dt>
+                            <dd><span class="mc"> React.js </span>, Javascript(JQuery)</dd>
+                            <dt>Font</dt>
+                            <dd>Noto Sans KR</dd>
+                            <dt>Color</dt>
+                            <dd>
+                                <span class="color c21"></span>
+                                <span class="color c22"></span>
+                                <span class="color c23"></span>
+                                <span class="color c24"></span>
+                            </dd>
+                            <dt>work</dt>
+                            <dd>개인작업 100%</dd>
+                            <dt>Info</dt>
+                            <dd class="desc">
+                                <span class="mc"> React.js 를 사용하여 제작한</span> 교육 서비스 업체 사이트입니다.
+                                </br> 아동, 청소년의 눈높이에 맞추어
+                                </br> 밝고 높은 채도의 색감과 캐릭터를 활용하였습니다.
+                                </br> 또한 섹션을 뚜렷하게 나누어
+                                </br> 효율적으로 정보를 전달 할 수 있도록 노력했습니다.
+                            </dd>
+                        </dl>
+                    </div>
+                    <div class="btn">
+                        <a href="https://emilyyujeong.github.io/react_test01/" target='_blank'>VIEW ON WEB</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="section section05">
+            <div class="inner">
+
+                <div class="content_bg">
+                    <div class="content">
+                        <div class="case">
+                            <a href=""><img src="./images/etude.png" alt="hyj_etude"></a>
+                        </div>
+                    </div>
+                    <div class="mo_bg">
+                        <div class="mo_content">
+                            <div class="mo_case">
+                                <a href=""><img src="./images/etude_mo.png" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="description">
+                    <div class="circle">
+                    </div>
+                    <strong>PROJECT 05</strong>
+                    <h2><img src="./images/logo_etude.png" alt="">에뛰드하우스 - 아모레퍼시픽</h2>
+                    <div class="txt_row">
+                        <dl>
+                            <dt>Type</dt>
+                            <dd><span class="mc">Responsive Web</span></dd>
+                            <dt>Tool</dt>
+                            <dd>HTML5, CSS3, Javascript(JQuery)</dd>
+                            <dt>Font</dt>
+                            <dd>Noto Sans KR</dd>
+                            <dt>Color</dt>
+                            <dd>
+                                <span class="color c31"></span>
+                                <span class="color c32"></span>
+                                <span class="color c33"></span>
+                                <span class="color c34"></span>
+                            </dd>
+                            <dt>Work</dt>
+                            <dd>개인작업 100%</dd>
+                            <dt>Info</dt>
+                            <dd class="desc">
+                                브랜드의 대표 색상인 핑크를 활용해
+                                </br> 전반적으로 밝고 아기자기한 분위기를 조성하였습니다.
+                                </br> 다양한 형태의 슬라이드와 레이아웃을 활용해
+                                </br> 사용자에게 흥미를 유도할 수 있게 구성하였습니다.
+                            </dd>
+                        </dl>
+                    </div>
+                    <div class="btn">
+                        <a href="https://emilyyujeong.github.io/re_etude/" target='_blank'>VIEW ON
+                            WEB</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
         <div class="section">
             <div class="profile">
                 <h2>PROFILE</h2>
@@ -384,11 +393,12 @@
     <div class="cover">
         <ul>
             <li><a href="#main">INTRO</a></li>
-            <li><a href="#portfolio01">PROJECT 01 - FINGERSUIT</a></li>
-            <li><a href="#portfolio02">PROJECT 02 - CREVERSE</a></li>
-            <li><a href="#portfolio03">PROJECT 03 - ETUDE</a></li>
-            <li><a href="#portfolio04">PROJECT 04 - EGGDROP</a></li>
-            <li><a href="#portfolio05">PROJECT 05 - SPAO</a></li>
+            <li><a href="#portfolio01">PROJECT 01 - EGGDROP</a></li>
+            <li><a href="#portfolio02">PROJECT 02 - SPAO</a></li>
+            <li><a href="#portfolio03">PROJECT 03 - FINGERSUIT</a></li>
+            <li><a href="#portfolio04">PROJECT 04 - CREVERSE</a></li>
+            <li><a href="#portfolio05">PROJECT 05 - ETUDE</a></li>
+
             <li><a href="#profile">PROFILE</a></li>
         </ul>
     </div>
