--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
                         <li>1993.01.16</li>
                         <li>신라대학교 영어교육과 졸업</li>
                         <li>프론트엔드 개발자 NCS 과정 수료</li>
+                        <li>토익: 945 / 토익스피킹: AM</li>
                     </ul>
                 </div>
                 <div class="career">
